@@ -131,3 +131,4 @@ Details of changes made to refnx
   its original location.
 - Produce autocorrelation graph when sampling in GUI.
 - Added links to ptemcee and emcee in the optimisation parameters window.
+- GUI produces corner plot after MCMC sampling
